--- a/scripts/config/repo-linux-tkg-themis.cfg
+++ b/scripts/config/repo-linux-tkg-themis.cfg
@@ -3,7 +3,7 @@
 # Linux distribution you are using, options are "Arch", "Ubuntu", "Debian", "Fedora", "Suse", "Gentoo", "Generic".
 # It is automatically set to "Arch" when using PKGBUILD.
 # If left empty, the script will prompt
-_distro=""
+_distro="Arch"
 
 # Kernel Version
 # Accepts
@@ -11,7 +11,7 @@ _distro=""
 # - git tags, e.g. "v6.0-rc4" or "v5.10.51"
 #   - Note: Patches may fail as they may only apply to newer trees.
 # If left empty, the script will prompt
-_version=""
+_version="6.18-latest"
 
 #### MISC OPTIONS ####
 
@@ -75,7 +75,7 @@ _modprobeddb="false"
 _modprobeddb_db_path=~/.config/modprobed.db
 
 # Set to "1" to call make menuconfig, "2" to call make nconfig, "3" to call make xconfig, before building the kernel. Set to false to disable and skip the prompt.
-_menunconfig=""
+_menunconfig="false"
 
 # Set to true to generate a kernel config fragment from your changes in menuconfig/nconfig. Set to false to disable and skip the prompt.
 _diffconfig=""
@@ -104,7 +104,7 @@ _config_updating="olddefconfig"
 # Note:
 # - if you encounter issues, test with this setting disabled first, then open a bug report on what necessary feature was disabled
 # - search '_debugdisable' in linux-tkg-config/prepare for the list of disabled CONFIG entries
-_debugdisable="false"
+_debugdisable="true"
 
 # Strip the kernel and its modules from debug symbols
 _STRIP="true"
@@ -114,38 +114,38 @@ _STRIP="true"
 # CPU scheduler - Options are "pds", "bmq", "bore", "cfs" (linux 6.5-) or "eevdf" (kernel's default, 6.6+)
 # "upds" (TkG's Undead PDS) and "muqss" are also available on legacy kernel revisions
 # If unsure, select "eevdf" (default)
-_cpusched=""
+_cpusched="eevdf"
 
 # Compiler to use - Options are "gcc" or "llvm".
 # For advanced users.
-_compiler=""
+_compiler="gcc"
 
 # [Generic and Gentoo specific] Replace `libunwind` with `llvm-libunwind`.
 # ! This is currently experimental.
 # ! It can only work with the `llvm-libunwind` `USE` flag in `llvm-core/clang-common` for Gentoo.
 # Set to "true" to enable.
-_libunwind_replace=""
+_libunwind_replace="false"
 
 # Use the LLVM Integrated Assembler for a complete LLVM toolchain built kernel. Default is "1" when using LLVM.
 # Set to "0" to disable if desired, otherwise stick to the default behavior.
-_llvm_ias="1"
+_llvm_ias="0"
 
 # Clang LTO mode, only available with the "llvm" compiler - options are "no", "full" or "thin".
 # ! This is currently experimental and might result in an unbootable kernel - Not recommended !
 # "no: do not enable LTO"
 # "full: uses 1 thread for Linking, slow and uses more memory, theoretically with the highest performance gains."
 # "thin: uses multiple threads, faster and uses less memory, may have a lower runtime performance than Full."
-_lto_mode=""
+_lto_mode="no"
 
 # Apply PREEMPT_RT patchset to the kernel.
 # ! Only CFS CPU scheduler is compatible with this patchset !
 # Set to "1" to enable.
-_preempt_rt=""
+_preempt_rt="0"
 
 # Forcibly apply the PREEMPT_RT patchset to the kernel, even when upstream does not officially support the kernel subversion.
 # ! This will still not apply when the patch itself or linux-tkg (see _version) do not support the kernel major version - Not recommended !
 # Set to "1" to enable.
-_preempt_rt_force=""
+_preempt_rt_force="0"
 
 # CPU sched_yield_type - Choose what sort of yield sched_yield will perform
 # For PDS and MuQSS: 0: No yield. (Recommended option for gaming on PDS and MuQSS)
@@ -154,7 +154,7 @@ _preempt_rt_force=""
 # For BMQ:           0: No yield.
 #                    1: Deboost and requeue task. (Default)
 #                    2: Set rq skip task.
-_sched_yield_type=""
+_sched_yield_type="0"
 
 # [MuQSS, PrjC, PDS, BMQ only, for kernel <= 6.6]
 # Round Robin interval is the longest duration two tasks with the same nice level will be delayed for.
@@ -164,16 +164,16 @@ _sched_yield_type=""
 # PDS default: 4ms"
 # BMQ default: 2ms"
 # Set to "1" for 2ms, "2" for 4ms, "3" for 6ms, "4" for 8ms, or "default" to keep the chosen scheduler defaults.
-_rr_interval=""
+_rr_interval="2"
 
 # Set to "true" to disable FTRACE, lowering overhead but limiting debugging and analyzing of kernel functions - Kernel default is "false"
 # Notes:
 # - May break many things, as it disables many child config options (FUNCTION_TRACER, GRAPH_TRACER, FBROBE, STACK TRACER...)
 # - Prevents sched-ext LAVD from properly working, see https://github.com/sched-ext/scx/blob/main/kernel.config#L19
-_ftracedisable="false"
+_ftracedisable="true"
 
 # Set to "true" to disable NUMA, lowering overhead, but breaking CUDA/NvEnc on Nvidia equipped systems - Kernel default is "false"
-_numadisable="false"
+_numadisable="true"
 
 # Set to "true" to enable misc additions - May contain temporary fixes pending upstream or changes that can break on non-Arch - Kernel default is "true"
 _misc_adds="true"
@@ -182,10 +182,10 @@ _misc_adds="true"
 # Full tickless can give higher performances in case you use isolation of CPUs for tasks
 # and it works only when using the nohz_full kernel parameter, otherwise behaves like idle.
 # Just tickless idle perform better for most platforms.
-_tickless=""
+_tickless="2"
 
 # Set to "true" to use ACS override patch - https://wiki.archlinux.org/index.php/PCI_passthrough_via_OVMF#Bypassing_the_IOMMU_groups_.28ACS_override_patch.29 - Kernel default is "false"
-_acs_override=""
+_acs_override="false"
 
 # Various patches and tweaks from Zen/Liquorix, Xanmod and the community - Default is "true"
 _glitched_base="true"
@@ -202,10 +202,10 @@ _compileroptlevel="1"
 # To list all the supported µarchs supported by your chosen compiler
 # - Clang: clang -mcpu=help
 # - GCC: gcc --target-help | grep -A 2 -m1 'Known valid' | sed -n '2p'
-_processor_opt=""
+_processor_opt="skylake"
 
 # MuQSS and PDS only - SMT (Hyperthreading) aware nice priority and policy support (SMT_NICE) - Kernel default is "true" - You can disable this on non-SMT/HT CPUs for lower overhead
-_smt_nice=""
+_smt_nice="false"
 
 # BORE only - The default lower bound limit of the base slice. Setting this value too high can cause the system to boot with an unnecessarily large base slice, resulting in high scheduling latency and poor system responsiveness.
 # Default is 2000000
@@ -215,10 +215,10 @@ _bore_min_base_slice_ns="2000000"
 _random_trust_cpu="true"
 
 # Timer frequency - "100" "250" "300" "500" "750" "1000" - More options available in kernel config prompt when left empty depending on selected cpusched with the default option pointed with a ">" (100 for muqss and 1000 for other cpu schedulers)
-_timer_freq=""
+_timer_freq="1000"
 
 # Default CPU governor - "performance", "ondemand", "schedutil" or leave empty for default (schedutil)
-_default_cpu_gov="ondemand"
+_default_cpu_gov="performance"
 
 # Use an aggressive ondemand governor instead of default ondemand to improve performance on low loads/high core count CPUs while keeping some power efficiency from frequency scaling.
 # It still requires you to either set ondemand as default governor or to select it in some way at runtime.
@@ -231,7 +231,7 @@ _aggressive_ondemand="true"
 _tcp_cong_alg=""
 
 # You can pass a default set of kernel command line options here - example: "intel_pstate=passive nowatchdog amdgpu.ppfeaturemask=0xfffd7fff mitigations=off"
-_custom_commandline="intel_pstate=passive split_lock_detect=off"
+_custom_commandline="intel_pstate=passive kernel.split_lock_mitigate=0 split_lock_detect=off nowatchdog mitigations=off quiet loglevel=2 systemd.show_status=false rd.udev.log_level=2"
 
 # Selection of Clearlinux patches
 _clear_patches="true"
@@ -249,7 +249,7 @@ _offline=""
 # [Arch only] If you want to bypass the stock naming scheme and enforce something else (example : "linux") - Useful for some bootloaders requiring manual entry editing on each release.
 # !!! It will also change pkgname - If you don't explicitely need this, don't use it !!!
 # Use _kernel_localversion instead on non-Arch based distros
-_custom_pkgbase=""
+_custom_pkgbase="linux-tkg-themis"
 
 # [non-Arch only] Kernel localversion. Putting it to "Mario" will make for example the kernel version be 5.7.0-tkg-Mario (given by uname -r)
 # If left empty, it will use "-tkg-${_cpusched}${_compiler}" where "${_cpusched}" will be replaced by the user chosen scheduler, ${_compiler} will be replaced by "-llvm" if clang is used (nothing for GCC).
@@ -259,7 +259,7 @@ _kernel_localversion=""
 # Set to your maximum number of CPUs (physical + logical cores) - Lower means less overhead - You can set it to "$(nproc)" to use the current host's CPU(s) core count, or leave empty to use default
 # If you set this to a lower value than you have cores, some cores will be disabled
 # Default Arch kernel value is 320
-_NR_CPUS_value=""
+_NR_CPUS_value="36"
 
 # [non-Arch only] Install kernel after the building is done ?
 # Options are: "yes", "no", "prompt"
@@ -284,10 +284,10 @@ KCPPFLAGS=""
 
 # Upstreamed version of Fsync from Linux 5.16 for previous kernel versions - https://github.com/andrealmeid/futex_waitv_patches
 # ! Only affect 5.13, 5.14 and 5.15 kernel branches. Safely ignored for 5.16 or newer !
-_fsync_backport="true"
+_fsync_backport="false"
 
 # Fsync legacy, known as FUTEX_WAIT_MULTIPLE (opcode 31) - previous version of fsync required for Valve Proton 4.11, 5.0 and 5.13 - https://steamcommunity.com/games/221410/announcements/detail/2957094910196249305
-_fsync_legacy="true"
+_fsync_legacy="false"
 
 # Set to "true" to enable support for futex2, a DEPRECATED interface that can be used by proton-tkg and proton 5.13 experimental through Fsync - Can be enabled alongside fsync legacy to use it as a fallback
 # https://gitlab.collabora.com/tonyk/linux/-/tree/futex2-dev
@@ -296,11 +296,11 @@ _fsync_legacy="true"
 _fsync_futex2="false"
 
 # Set to "true" to add back missing symbol for AES-NI/AVX support on ZFS - This is a legacy option that can be ignored on 5.10+ kernels - https://github.com/NixOS/nixpkgs/blob/master/pkgs/os-specific/linux/kernel/export_kernel_fpu_functions.patch
-_zfsfix="true"
+_zfsfix="false"
 
 # MuQSS only - CPU scheduler runqueue sharing - No sharing (RQ_NONE), SMT (hyperthread) siblings (RQ_SMT), Multicore siblings (RQ_MC), Symmetric Multi-Processing (RQ_SMP), NUMA (RQ_ALL)
 # Valid values are "none", "smt", "mc", "mc-llc"(for zen), "smp", "all" - Kernel default is "smt"
-_runqueue_sharing=""
+_runqueue_sharing="none"
 
 # MuQSS only - Make IRQ threading compulsory (FORCE_IRQ_THREADING) - Default is "false"
 _irq_threading="false"
@@ -311,7 +311,7 @@ _irq_threading="false"
 # - Conflicts with bcachefs for linux <= 6.0
 # - More information https://lore.kernel.org/lkml/20220706220022.968789-1-yuzhao@google.com/
 # - Older kernel versions might have a patch available in the community-patches repo
-_mglru="true"
+_mglru="false"
 
 # Set to "true" to enable builtin support for ntsync, an experimental replacement for esync - requires patched wine - https://repo.or.cz/linux/zf.git/shortlog/refs/heads/ntsync5
 # ! Can't be used on multiple kernels installed side-by-side, which will require https://aur.archlinux.org/packages/ntsync-dkms instead of this option !
@@ -331,7 +331,7 @@ _community_patches=""
 _user_patches="true"
 
 # Apply all user patches without confirmation - !!! NOT RECOMMENDED !!!
-_user_patches_no_confirm="false"
+_user_patches_no_confirm="true"
 
 
 #### CONFIG FRAGMENTS ####
