--- a/scripts/config/repo-nvidia-all.cfg
+++ b/scripts/config/repo-nvidia-all.cfg
@@ -29,29 +29,29 @@ _nvsettings="true"
 # Set _eglwayland to "true" to create egl-wayland package using Nvidia's tarball - conflicts with Arch's egl-wayland package
 # Set _eglwayland to "false" to skip egl-wayland package creation and not depend on the Arch provided egl-wayland package
 # Set _eglwayland to "external" to use the Arch provided egl-wayland package (default)
-_eglwayland="external"
+_eglwayland="false"
 
 # Set _eglgbm to "true" to add egl-gbm binaries to the egl-wayland package using Nvidia's tarball - conflicts with Arch's egl-gbm package
 # Set _eglgbm to "false" to skip Nvidia's tarball egl-gbm binaries and not depend on the Arch provided egl-gbm package
 # Set _eglgbm to "external" to use the Arch provided egl-gbm package (default)
 # Depends on _eglwayland="external"
-_eglgbm="external"
+_eglgbm="false"
 
 # Either "vulkandev" for vulkan developer drivers or "regular" for all others
-_driver_branch=""
+_driver_branch="regular"
 
 # Desired driver version - !! needs to be available from the selected branch above !!
 # Set to "latest" to use the latest driver on the selected branch.
-_driver_version=""
+_driver_version="latest"
 
 # Set to "true" to build open source modules if available, or leave empty to get a prompt
 # Available for 515.43.04 beta or newer only
-_open_source_modules=""
+_open_source_modules="true"
 
 # Set to "true" to blacklist nouveau. may be needed early kms on nvidia.
 # if you on like prime system, and not need nvidia module on startup, then can false.
 # (default true)
-_blacklist_nouveau=""
+_blacklist_nouveau="true"
 
 # Set to "true" to enable specific NVIDIA module parameters
 # These options optimize NVIDIA driver behavior for performance
@@ -106,7 +106,7 @@ _modprobe_mobile="false"
 #     Allows full performance while streaming/recording (see: NVIDIA/open-gpu-kernel-modules#333)
 #
 # (default false) NOTE: available for VERSION >= 580+
-_perf_optimizations="false"
+_perf_optimizations="true"
 
 # Set to "true" to apply `nvidia-patch` to remove NVENC session limit and enable NVFBC on consumer cards
 # Patches `libnvidia-encode.so` to remove NVENC session limit
@@ -119,16 +119,16 @@ _nvidia_patch_enc_fbc="false"
 # Only updates if there is a newer version available
 # Semi-hack, compares version-strings as strings, i.e. if "460.39" > "455.45.01" update etc
 # Set to "true" to enable
-_only_update_if_newer=""
+_only_update_if_newer="false"
 
 # Set to "true" to use DKMS or "false" to use regular modules. You can also use "full" to build both dkms and regular packages (don't use it if you don't know you need it!).
-_dkms=""
+_dkms="true"
 
 # Enable GCC 15 fixup patch
 _gcc15_fix="false"
 
 # Set to "true" to disable installing the libalpm hook for updating the driver in initramfs, installs otherwise.
-_disable_libalpm_hook=""
+_disable_libalpm_hook="false"
 
 ## LEGACY OPTIONS
 
