--- a/scripts/config/repo-wine-tkg-git.cfg
+++ b/scripts/config/repo-wine-tkg-git.cfg
@@ -39,7 +39,7 @@ _GENERATE_DEBIAN_PACKAGE="false"
 # Custom presets : "fo4", "legacy", "mwo", "sims2", "oldnvidia-sims3", "protonified", "unity".
 # Valve presets :  "valve" (builds against current valve proton tree), "valve-exp" (builds against current valve proton-experimental tree), "valve-exp-bleeding" (builds against current valve proton-experimental-bleeding-edge tree)
 # Clean presets (untouched) : "mainline", "staging".
-_LOCAL_PRESET=""
+_LOCAL_PRESET="valve-exp-bleeding"
 
 # Add GloriousEggroll game patches and hotfixes when using a Valve profile with staging enabled
 # ! This will only affect Valve + staging trees !
@@ -47,7 +47,7 @@ _LOCAL_PRESET=""
 _use_GE_patches="true"
 
 # Add GloriousEggroll patches and hotfixes for winewayland
-_GE_WAYLAND="true"
+_GE_WAYLAND="false"
 
 # plain wine commit or version tag if you want to use a specific wine version. Can use e.g. "64d9f30", "wine-3.16" or "wine-4.0"
 # !!! Only affects non-staging builds (you want to edit the staging_version below for staging builds) !!!
@@ -62,7 +62,7 @@ _staging_version=""
 
 # Set to true to pass --with-wayland --with-vulkan configure arguments
 # !! Requires a compatible wine tree (9.0+ recommended) !!
-_wayland_driver="true"
+_wayland_driver="false"
 
 
 #### LEGACY ####
@@ -116,7 +116,7 @@ _assettocorsa_hudperf_fix="false"
 
 # Fixes for Mortal Kombat 11 - Requires staging, _proton_fs_hack="true", native mfplat (win7) or staging mfplat support and a different GPU driver than RADV
 # On Wine 5.2 (up to b1c748c8) and lower, it needs to be toogled on with the WINE_LOW_USER_SPACE_LIMIT=1 envvar
-_mk11_fix="true"
+_mk11_fix="false"
 
 # Workaround for Final Fantasy XIV Launcher 404 error - Thanks @varris1 ! - Fixed by d535df42f665a097ec721b10fb49d7b18f899be9 (4.10)
 # Found to also enable the new launcher (that came with the 5.1 update) to work *with issues*
@@ -145,15 +145,15 @@ _FS_bypass_compositor="false"
 
 # Proton Fullscreen patch - Requires 3.16+ for staging and 5.0+ for mainline - Allows resolution changes for fullscreen games without changing desktop resolution
 # You can optionally use nearest neighbour upscaling with the WINE_FULLSCREEN_INTEGER_SCALING envvar
-_proton_fs_hack="false"
+_proton_fs_hack="true"
 
 # Various vulkan patches from Proton 10 for wine - Requires 10.0+
 #WARNING: For now not sure if shared gpu resoures is working. Need some testing with games which requires this - https://github.com/Frogging-Family/wine-tkg-git/issues/1328#issuecomment-2921990068
 # This is a brittle patchset and will break often, beware
-_proton_winevulkan="false"
+_proton_winevulkan="true"
 
 # Various MF/winegstreamer patches from Proton 10 for wine - Requires 10.0+ and _proton_winevulkan="true" - Fixing various problem with playback video
-_proton_mf_patches="false"
+_proton_mf_patches="true"
 
 # Proton compatible rawinput patchset - Only effective when _proton_fs_hack is set to "true" - Requires a tree containing 6d7828e8df68178ca662bc618f7598254afcfbe1 (4.20+)
 _proton_rawinput="true"
@@ -163,11 +163,11 @@ _msvcrt_nativebuiltin="false"
 
 # Use Proton's updated win10 versioning and better productid - Necessary to enable d3d12 (for use with vkd3d) in some games
 # Also sets the default wine version to win10 (instead of win7) on Wine <8.1
-_win10_default="false"
+_win10_default="true"
 
 # Other misc proton patches and hacks - Notably contains fixes for some native vk games (such as Doom Eternal) as well as Rockstar launcher
 # Also enables some winevulkan performance optimizations - https://github.com/Joshua-Ashton/proton-wine/tree/winevulkan-opt (fs hack) - https://github.com/Joshua-Ashton/wine/commits/winevulkan-opt-mainline (no fs hack)
-_protonify="false"
+_protonify="true"
 
 
 #### USER PATCHES - See README in ./wine-tkg-userpatches dir for instructions ####
